1999-02-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* history.el, sgml.el: Add SWARMDOCS_BUILD_AREA to load-path for
	both compilation and loading. 

	* history.el: Require common.

	* sgml.el: Require protocol.

	* Makefile.common: Add Emacs makefile-mode clue.
	(abs_top_builddir): New variable, the absolute
	path of top_builddir.
	(EMACS): Always pass SWARMDOCS_BUILD_AREA with abs_top_builddir
	to emacs.  Depending on whether we are loading or compiling we
	can get different default-directory values.
	($(top_builddir)/common.elc,$(top_builddir)/history.elc): New rules.
	(%revhistory.sgml): Depend on local elc files.

1999-02-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* history.el: Load $SWARMSRCDIR/etc/common.el instead of common.el.

	* configure.in (AC_INIT): Check for sgml.el instead of protocol.el.

	* Makefile.common (%revhistory.sgml): Depend on
	$(swarm_srcdir)/etc/common.el instead of common.el.

	* Makefile.am (EXTRA_DIST): Remove protocol.el and common.el.
	Add graph.el and sgml.el.

	* sgml.el, graph.el: New files, {sgml,graph}-related code from
	protocol.el.

	* protocol.el: Removed.  (Parsing code now in Swarm.)

1999-02-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* protocol.el (generic-description-list): Don't reverse result.

1999-02-10  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am (JADEFLAGS): Remove.

	* Makefile.rules (JADEFLAGS): Move from Makefile.am.

	* common.dsl (id-to-indexitem): Enhance to check for BIBLIOGRAPHY,
	and TABLE.

1999-02-09  Alex Lancaster  <alex@santafe.edu>

	* catalog.in: Add new *.sgml ENTITIES for `Random Library'
	Appendix.

	* NEWS: Note addition of Appendix for `Random Library'.

	* Makefile.am (JADEFLAGS): Add, set to `-V biblio-citation-check'
	so citations appear as links to bibliography in HTML.

1999-02-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* configure.in: Bump version to 1.4.1.

1999-01-26  Alex Lancaster  <alex@santafe.edu>
