@@ -1,7 +1,7 @@
 (require 'cl)
 
 (eval-and-compile
- (push (getenv "SWARMDOCS_BUILD_AREA") load-path))
+ (push (getenv "BUILD_AREA") load-path))
 
 (require 'protocol)
 
@@ -70,7 +70,7 @@
   (insert "</INDEX>\n"))
 
 (defun sgml-generate-indices ()
-  (with-temp-file (concat (get-swarmdocs-build-area) "refbook/refindex.sgml")
+  (with-temp-file (concat (get-build-area) "refbook/refindex.sgml")
     (sgml-generate-protocol-index)
     (sgml-generate-method-signature-index)
     (loop for type in '(function global macro typedef)
